--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </button>
     <main>
         <section>
-            <img src="homepage/homepage.png" alt="">
+            <img src="img/homepage.png" alt="">
             
         </section>
-        <section><img src="homepage/MarkoHP.gif" alt=""></section>
+        <section><img src="img/MarkoHP.gif" alt=""></section>
     </main>
 <script src="script.js"></script>
 
